--- a/src/pages/dashboardPage/navigation/sideNav.scss
+++ b/src/pages/dashboardPage/navigation/sideNav.scss
@@ -8,7 +8,6 @@ $md: 768px;
   padding: 40px 20px;
   background-color: #062863;
   color: #ffffff;
-  overflow-y: scroll;
 
   .hamburger-menu,
   .nav-link {
